# usc-interaction-software

./: .dput.cf  .mini-dinstall.conf  .pbuilderrc  CMakeLists.txt  Makefile  ProjectHome.md  Retargeting.md  UbuntuPPA.md  build-debs.bash  buildinfo  clean-pbuilder.bash  crontab  env  force-update-local-ppa.bash  jobs.sh  mainpage.dox  make_deb.bash  manifest.xml  setup-pbuilder-deps-interaction.bash  setup-pbuilder-deps-maverick-ros.bash  setup-pbuilder-deps-oneiric-ros.bash  setup-pbuilder-deps-precise-ros.bash  setup-pbuilder-env-deps.bash  setup-pbuilder-envs.bash  setup-pbuilder-interaction.bash  setup-pbuilder-oneiric.bash  setup-pbuilder-precise.bash  setup-pbuilder-ros.bash  update-all.bash  update-ekaszubski-code-prototyping.bash  update-ekaszubski-website-robotics.bash  update-interaction-internal.bash  update-interaction-ros-pkg.bash  update-local-ppa.bash  update-remote-ppa.bash  update-seabee3-ros-pkg.bash  update-sources.bash  update-usc-interaction-software.bash  update-usc-ros-pkg.bash
.pbuilder/hooks/: A00export-ros-electric-env  C00test-ros-cmd  F00dist-upgrade  F00install-cowbuilder-deps  F00install-interaction-deps  F00install-maverick-diamondback-deps  F00install-maverick-electric-deps  F00install-maverick-interaction-deps  F00install-maverick-ros-diamondback  F00install-maverick-ros-electric  F00install-oneiric-electric-deps  F00install-oneiric-fuerte-deps  F00install-oneiric-groovy-deps  F00install-oneiric-interaction-deps  F00install-precise-fuerte-deps  F00install-precise-groovy-deps  F00install-precise-interaction-deps  export-ros-electric-env
cmake/: OpenCVGenPkgconfig.cmake
cmake/templates/: opencv-XXX.pc.cmake.in
debian/: README.Debian  README.source  changelog  changelog.in  control  copyright  libopencv2.4-dev.install  libopencv2.4.dirs  libopencv2.4.install  opencv2.4-dev.install  opencv2.4.install
debsign/: sign-release.sh
envision/: CMakeLists.txt  mainpage.dox  manifest.xml
envision/include/envision/: env_c_math_ops.h  env_channel.h  env_image.h  env_image_ops.h  env_motion_channel.h  env_mt_visual_cortex.h  env_params.h  env_stdio_interface.h  env_visual_cortex.h
envision/src/: CMakeLists.txt  env_c_math_ops.c  env_image.c  env_job_server.c  env_math.c  env_motion_channel.c  env_mt_visual_cortex.c  env_pthread_interface.c  env_pyr.c  env_stdio_interface.c
envision/test/: CMakeLists.txt  envision-benchmark.c  test-envision.c
envision_opencv/src/: env_opencv.cpp
include/: CMakeLists.txt
include/envision/: env_alloc.h  env_config.h.in  env_image.h  env_image_ops.h  env_job_server.h  env_math.h  env_mt_channel.h  env_opencv.h  env_pyr.h  env_types.h
probabilistics/: CMakeLists.txt  buildinfo
probabilistics/debian/: README.Debian  changelog  changelog.in  control  copyright  libinteraction-probabilistics-0-dev.install  libinteraction-probabilistics-0-dev.links  libinteraction-probabilistics-dev.install  libinteraction-probabilistics-dev.links  libinteraction-probabilistics.install
probabilistics/include/: CMakeLists.txt
probabilistics/pkgconfig/: interaction-probabilistics.pc.in
probabilistics/src/: CMakeLists.txt
probabilistics/tests/: test_truncated_normal.cpp  test_unsigned_normal.cpp  test_von_mises.cpp
scripts/: buildinfo
scripts/bash/: interaction-init-changelog  interaction-make-deb
scripts/debian/: README.Debian  README.source  changelog  changelog.in  control  copyright  install
scripts/python/: interaction-init-changelog.py  interaction-make-deb.py
sparky/: CMakeLists.txt  Makefile  buildinfo  mainpage.dox  manifest.xml
sparky/debian/: README.source  changelog.in  control  libinteraction-sparky-dev.dirs  libinteraction-sparky-dev.install  libinteraction-sparky-dev.links  libinteraction-sparky.dirs  libinteraction-sparky.install  rules
sparky/include/: CMakeLists.txt
sparky/include/sparky/: angle_servo_controller.h  bez_curve.hh  comp.hh  controller.hh  curve_pane.hh  curve_set.hh  global.hh  global_flags.h  init.hh  joint_angle_controller.h  macros.h  maestro_servo.h  maestro_servo_controller.h  main_frame.hh  parsed_function.h  pololu.hh  servo.h  servo.hh  servo_angle_controller.h  servo_controller.h  sparky_controller.h  transfer_function.h  utility.hh
sparky/include/sparky.backup/: anchor.hh  comp.hh  controller.hh  curve.hh  curve_set.hh  pololu.hh  scroller.hh  selector.hh  time_bar.hh  utility.hh
sparky/nodes/: servo_angle_controller_node.cpp  servo_controller_node.cpp  sparky_controller_node.cpp  yaml_parser_node.cpp
sparky/params/: params.yaml  params.yaml.backup  params_prototype1.yaml  transfer_function.yaml
sparky/pkgconfig/: CMakeLists.txt  sparky.pc.in
sparky/src/: CMakeLists.txt  angle_servo_controller.cpp  angle_servo_controller_main.cpp  bez_curve.cc  comp.cc  controller.cc  curve_pane.cc  curve_set.cc  editor_main.cc  init.cc  joint_angle_controller.cpp  maestro_servo_controller.cpp  maestro_servo_controller_main.cpp  main_frame.cc  player.cc  pololu.cc  scroller.cc  selector.cc  servo.cc  servo.cpp  servo_angle_controller.cpp  servo_controller.cpp  sine_main.cc  sparky_controller.cpp  sparky_controller_main.cpp  test.cc  time_bar.cc  utility.cc  yaml_parser.cpp
sparky/src/sparky-core/: CMakeLists.txt  joint_angle_controller.cpp  parsed_function.cpp  servo.cpp  servo_angle_controller.cpp  servo_controller.cpp  sparky_controller.cpp  transfer_function.cpp
sparky/tests/: CMakeLists.txt  test_parsed_function.cpp  test_servo_angle_controller.cpp  test_sparky_controller.cpp  test_yaml_parser.cpp  test_yaml_transfer_function.cpp
src/: env_alloc.c  env_channel.c  env_image.c  env_image_ops.c  env_log.c  env_mt_channel.c  env_mt_visual_cortex.c  env_opencv.cpp  env_params.c  env_visual_cortex.c
test/: envision-smoketest.c
